# masked-libraries

./: .gitignore  README.md  masked.cabal
Masked/: Prelude.hs
Masked/Control/: Monad.hs
Masked/Data/: List.hs
